tests/sumo/basic/tls/errors/missing_yellow/errors.sumo
Warning: Missing yellow phase in tlLogic 'C', program 'custom' for tl-index 0 when switching to phase 1
Warning: Missing yellow phase in tlLogic 'C', program 'custom' for tl-index 5 when switching to phase 4
